# my_wav2vec2

./: README.md  pyproject.toml  server_stt.py
