[project]
name = "my-wav2vec2-stt"
version = "1.0.0"
description = "Wav2Vec2 Korean STT Server - FastAPI based Speech-to-Text service (CPU Optimized)"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Peace Cho", email = "chopeacekr@gmail.com" }
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "torch>=2.0.0,<2.4.0",
    "transformers>=4.35.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.1",
    "numpy<2",
    "scipy>=1.10.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]